# odte-spy-bot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  SYSTEM.md  pyproject.toml  requirements-extras.txt  requirements.txt
config/: config.yaml  events.yaml  model_params.yaml  risk_params.yaml
dashboard/: README.md  REMOTE.md  run_tunnel.sh  run_warroom.sh  serve.py  setup_remote.sh  setup_tunnel.sh  warroom.py
deploy/: com.pcnslt.2fa-reminder.plist  com.pcnslt.dashboard-tunnel.plist  com.pcnslt.dashboard.plist  com.pcnslt.odte-spy-bot.plist  com.pcnslt.warroom.plist
docs/: AI_REVIEW.md  MASTER_PLAN_V2.md  PREREGISTRATION_G2FWD.md  PREREGISTRATION_V2.md  RESEARCH_PROTOCOL.md
models/: lightgbm_breach_dn.txt  lightgbm_breach_dn_meta.json  lightgbm_breach_up.txt  lightgbm_breach_up_meta.json  lightgbm_directional.txt  lightgbm_meta.json  lightgbm_range.txt  lightgbm_range_meta.json  metrics_history.json
scripts/: make_audit_bundle.sh  run_paper_day.sh
src/: __init__.py  backtest.py  briefing.py  common.py  dashboard.py  dashboard_html.py  livedash.py  main.py  monitor.py  reconcile.py  session_chart.py  session_log.py
tests/: conftest.py  test_briefing.py  test_broker_refresh.py  test_close_fill_bug.py  test_cost_meta_labeler.py  test_dashboard_html.py  test_dashboard_live.py  test_data.py  test_execution.py  test_holdout.py  test_integration.py  test_intelligence.py  test_learning.py  test_leg_quotes_wait.py  test_livedash.py  test_loosened_entry.py  test_monitor.py  test_nbbo_backtest.py  test_prereg_g2fwd.py  test_quote_logger.py  (+10 more)
(+53 files in other folders)
